style/ui.css
.body{
    height: 1600px;
    width: 790px;
    overflow: hidden;
}
#innerBody{
    width: 790px;
    height: 780px;
    visibility: visible;
    overflow: hidden;
}
#tutorial{
    overflow: hidden;
    position: absolute;
    top: 400px;
}
#char{
    position: absolute;
    left: 410px;
    top: 440px;
    visibility: visible;
    height: 10px;
    width: 10px;
    background-color: white;
}
#box{
    visibility: hidden;
}
#font{
    opacity: 0;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
}
#dialog{
    visibility: hidden;
    width: 700px;
    height: 200px;
    position: absolute;
    top: 550px;
    left: 30px;
    border: solid 10px white;
    border-radius: 5px;
    background-color: black;
}
#text{
    position: absolute;
    left: 20px;
    top: 80px;
    font-size: x-large;
    visibility: visible;
    color: white;
}
#textbox{
    width: 500px;
    height: 200px;
}
.fontani{
    animation: font 3s ease-in-out;
}
.box{
    width: 500px;
    height: 100px;
    border: solid white 10px;
    background-color: black;
    border-radius: 5px;
    position: absolute;
    top: -120px;
    left: 150px;
    text-align: center;
    line-height: 3;
    animation: box 5s ease-in-out;
}
.offLoad{
    animation: offLoad 2s linear;
}
#puzzle0{
    width: 500px;
    height: 100px;
    background-color: black;
}
/*from puzzle0.css*/
    #caption{
        left:100px;
        position:sticky;
    }
    #ans1{
        height:50px;
        width:60px;
        border:solid white 5px;
        position:absolute;
        left:230px;
        top:50%;
        transform:translateY(-50%);
    }
    #ans2{
        height:50px;
        width:60px;
        border:solid white 5px;
        position:absolute;
        left: 330px;
        top:50%;
        transform:translateY(-50%);
    }
    #ans3{
        height:50px;
        width:60px;
        border:solid white 5px;
        position:absolute;
        left:430px;
        top:50%;
        transform:translateY(-50%);
    }
    #button{
        left:330px;
        top:50%;
        position:absolute;
        transform:translateY(200%);
    }
    #unlock{
        left:330px;
        top:50%;
        position:absolute;
        transform:translateY(200%);
    }
    .input{
        background-color: black;
        color: white;
        font-size: 20px;
        border: 0px;
        padding: 1px;
        line-height: 40px;
        position: absolute;
        top: 4px;
        text-align: center;
    }
/*from puzzle0.css end*/ 
@keyframes box{
    0%{top: -120px;visibility: visible;}
    30%{top: 10px;visibility: visible;}
    70%{top: 10px;visibility: visible;}
    100%{top: -120px;visibility: visible;}
}
@keyframes font{
    0% {opacity: 0;}
    25% {opacity: 1;}
    75% {opacity: 1;}
    100% {opacity: 0;}
}

